--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 default-run = "tron-io"
 
 [dependencies]
-gamepads = "0.1.7"
+gamepads = { version = "0.1.6", default-features = false }
 macroquad = { version = "0.4.13", features = ["audio"] }
 nanoserde = "0.1.37"
 quad-net = "0.1.2"
