--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ default-run = "tron-io"
 gamepads = { version = "0.1.6", default-features = false }
 macroquad = { version = "0.4.13", features = ["audio"] }
 nanoserde = "0.1.37"
-quad-net = "0.1.2"
+# Fix receiving binary data in webassembly
+quad-net = {git = "https://github.com/not-fl3/quad-net.git", rev = "refs/pull/8/head"}
 
 
 # Enable a small amount of optimization in debug mode
