Fix server unwrap and update to ec2 server

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,6 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      
+      - name: Install dumb dependencies
+        run: apt-get update && apt-get install -y gcc libudev-dev pkg-config libasound-dev
+
       - name: ⚡ Cache
         uses: actions/cache@v4.2.0
         with:
