--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 default-run = "tron-io-client"
 
 [dependencies]
+quad-lib = {path = "../quad-lib"}
 tron-io-world = { path = "../world" }
 gamepads = { version = "0.1.6", default-features = false }
 macroquad = { version = "0.4.13", features = ["audio"] }
