--- a/.github/workflows/wasm.yml
+++ b/.github/workflows/wasm.yml
@@ -15,6 +15,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: true
       - name: ⚡ Cache
         uses: actions/cache@v4.2.0
         with:
